# RedeNeural

./: CMakeLists.txt  README.md
data/: exemplo_rede.txt
data/models/: circle_model.txt  number_rec_model.txt  numbr_rec_model.txt  numbr_rec_model1.txt  sin_aprox_model.txt  sqrt_aprox_model.txt  xor_model.txt
includes/: camadas_saida.h  rede_neural.h
scripts/: build.sh
src/: draw_recognition.cpp  example.cpp  exemplo.cpp  nn_sequencial.cpp  pAInt.cpp  rec_nums.cpp  rede_neural.cpp  sqrt_aprox.cpp  xor_model.cpp
